# todos

./: app.py  pyproject.toml
static/javascripts/: application.js
templates/: edit_list.html  layout.html  list.html  lists.html
todos/: utils.py
